basic-db-api/03_webserver.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-api-deployment
  namespace: basic-api
  labels:
    app: test-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-api
  template:
    metadata:
      labels:
        app: test-api
    spec:
      containers:
        - name: test-api
          image: kimjypar/test-api:latest
          ports:
            - containerPort: 8000
              name: test-api
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: basic-api
spec:
  type: NodePort
  ports:
    - port: 8000
  selector:
    app: test-api
