basic-db-api/04_ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: headless-service
spec:
  clusterIP: None
  externalName: service-test.default.svc.cluster.local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ingress-redirect
spec:
  rules:
  - host: k8s.worker-01.start-here.co.kr
    http:
      paths:
      - pathType: Prefix
        path: /red-test
        backend:
          service:
            name: headless-service
            port: 
              number: 80
